# tgs-project

./: .gitignore  Assistance in TGS Project.txt  README.md  pyproject.toml
generated_data/: README.md
models/: README.md
notebooks/: document_eda.ipynb  tests.ipynb
scripts/: initialize_solr.py  ner_extraction.py  resolve_coreferences.py  tokenize_by_sentence.py  train_tf_idf.py  train_word_2_vec.py
tests/: test_colbert_install.py  test_get_data.py  test_gpu_participation.py  test_ner_article.py  test_spacy_install.py
tgs_project/: logger.py  utils.py
tgs_project/backend/: initialize_solr.py  solr.py
tgs_project/document_processing/: datasets.py  ner_extraction.py  resolve_coreferences.py  sentence_processing.py  tf_idf_mapping.py  word_2_vec.py
tgs_project/pipeline/: pipeline.py
